alinmapay/openshift-KDC/ms-market/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: market
spec:
  selector:
    app: market
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8983
  type: ClusterIP
